# model-helper

./: .gitignore  README.md  model-helper  pyproject.toml  requirements.txt
model_helper/: __init__.py  config.json  config.py  default_providers.json
model_helper/cache/: __init__.py  manager.py
model_helper/cli/: __init__.py  main.py
model_helper/data/: models.py  schema.py
model_helper/scrapers/: __init__.py  base.py
model_helper/search/: __init__.py  engine.py
model_helper/web/: __init__.py  app.py
model_helper/web/templates/: 404.html  base.html  index.html  search.html
model_helper/web/templates/benchmarks/: index.html
model_helper/web/templates/models/: detail.html  list.html
